Modified DHCP and ROOM endpoints
